--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,28 @@
 <div class="top-menu">
-
-    <img class="logo"
-         src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
-
+  <img
+    class="logo"
+    src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png"
+  />
 </div>
 
-
-<div class="courses">
-
-    <div class="course-card">
-
-        <div class="course-title">
-            Angular Core Deep Dive
-        </div>
-        <img width="300" alt="Angular Logo"
-             src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-core-in-depth-small.png">
-
-        <div class="course-description">
-            A detailed walk-through of the most important part of Angular - the Core and Common modules.
-        </div>
-
+<div>
+  <div class="courses">
+    @for (course of courses; track course.id; let index = $index; let count =
+    $count; let first = $first; let odd = $odd) {
+    <h1 class="title">Count: {{ count }}</h1>
+    <course-card
+      (courseSelected)="onCourseSelected($event)"
+      [course]="course"
+      [index]="index"
+      [class.is-first]="first"
+      [class.is-last]="$last"
+      [class.is-even]="$even"
+      [class.is-odd]="odd"
+    />
+    } @empty {
+    <div class="empty">
+      <p>There are no courses to display</p>
     </div>
-
+    }
+  </div>
 </div>
-
-
