try viewchild, viewchildren

--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,10 +1,33 @@
-<div class="course-card">
-  <div class="course-title">{{ course.description }}</div>
+<div [ngClass]="cardClasses()">
+  <div class="course-title" [ngStyle]="{ 'text-decoration': 'underline' }">
+    {{ course.description }}
+  </div>
   <div>{{ index + 1 }}</div>
+
+  @if (course.iconUrl) {
   <img width="300" alt="Angular Logo" [src]="course.iconUrl" />
+  } @else {
+  <img
+    width="300"
+    alt="Angular Logo"
+    src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png"
+  />
+  }
 
   <div class="course-description">
     {{ course.longDescription }}
+  </div>
+
+  <div class="course-category">
+    @switch (course.category) { @case ("BEGINNER") {
+    <div class="category">Beginner</div>
+    } @case ("INTERMEDIATE") {
+    <div class="category">Intermediate</div>
+    } @case ("ADVANCED") {
+    <div class="category">Advanced</div>
+    } @default {
+    <div class="category">UNKNOWN</div>
+    } }
   </div>
 
   <button (click)="onCourseViewed()">View Course</button>
