--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,10 @@
   />
 </div>
 
+<button (click)="loadCourses()">Load Courses</button>
+
 <div>
-  <div class="courses">
+  <div class="courses" #container>
     @for (course of courses; track course.id; let index = $index; let count =
     $count; let first = $first; let odd = $odd) {
     <h1 class="title">Count: {{ count }}</h1>
@@ -18,6 +20,7 @@
       [class.is-last]="$last"
       [class.is-even]="$even"
       [class.is-odd]="odd"
+      #cardRefs
     />
     } @empty {
     <div class="empty">
@@ -26,3 +29,4 @@
     }
   </div>
 </div>
+<router-outlet></router-outlet>
