--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,28 @@
 <div class="top-menu">
-
-    <img class="logo"
-         src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
-
+  <img
+    class="logo"
+    src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png"
+  />
 </div>
 
-
-
-<div class="courses" *ngIf="courses[0] as course">
-
+<ng-template [ngIf]="courses[0]" let-course>
+  <!-- <div class="courses" *ngIf="courses[0] as course"> -->
+  <div class="courses">
     <course-card
-            (courseSelected)="onCourseSelected($event)"
-                 [course]="course">
+      highlighted
+      #highlightedCourse="hl"
+      (highlightedChange)="onCourseSelected($event)"
+      (courseSelected)="onCourseSelected($event)"
+      [course]="course"
+    >
+      <course-image
+        [src]="course.iconUrl"
+        *ngxUnless="!course.iconUrl"
+      ></course-image>
 
-        <course-image [src]="course.iconUrl"></course-image>
-
-        <div class="course-description">
-            {{ course.longDescription }}
-        </div>
-
+      <div class="course-description" (dblclick)="highlightedCourse.toggle()">
+        {{ course.longDescription }}
+      </div>
     </course-card>
-
-
-</div>
-
-
+  </div>
+</ng-template>
