--- a/src/app/course-card/course-card.component.css
+++ b/src/app/course-card/course-card.component.css
@@ -1,6 +1,55 @@
+:host {
+  display: block;
 
-.course-card.beginner {
-    background: lightsalmon;
+  .is-first {
+    border-top: 2px solid grey;
+    padding-top: 20px;
+  }
+
+  .is-last {
+    border-bottom: 2px solid grey;
+    padding-top: 20px;
+  }
+
+  .is-even {
+    background: lightgray;
+  }
+
+  .is-odd {
+    background: lightcyan;
+  }
 }
 
+:host-context(.indigo-pink) .course-card {
+  background-color: salmon;
+}
 
+.course-card {
+  margin-bottom: 40px;
+  text-align: center;
+  border-radius: 4px;
+  padding: 20px 0;
+  box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.2), 0 2px 8px 0 rgba(0, 0, 0, 0.14),
+    0 4px 8px -1px rgba(0, 0, 0, 0.12);
+}
+
+.course-card .course-title {
+  font-size: 27px;
+  font-weight: bold;
+}
+
+.course-card ::ng-deep .course-description {
+  max-width: 360px;
+  margin: 0 auto;
+  margin-top: 15px;
+  user-select: none;
+}
+
+.course-card img {
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+.course-card.beginner {
+  background: lightsalmon;
+}
