attribute decorator in change detection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,12 @@
     <button (click)="onEditCourse()">Change Course</button>
   </div>
 
-  <div class="courses" *ngIf="courses">
+  <div class="courses" *ngIf="courses$ | async as courses">
     <course-card
       *ngFor="let course of courses"
       [course]="course"
       (courseChanged)="save($event)"
+      type="beginner"
     >
       <course-image [src]="course.iconUrl"></course-image>
     </course-card>
