--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     <button (click)="onEditCourse()">Change Course</button>
   </div>
 
-  <div class="courses" *ngIf="courses$ | async as courses">
+  <div class="courses">
     <course-card
       *ngFor="let course of courses"
       [course]="course"
