--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,8 @@
     <button (click)="onEditCourse()">Change Course</button>
   </div>
 
-  <div class="courses">
+  <div class="courses" *ngIf="courses[0] as course">
     <course-card
-      *ngFor="let course of courses"
       [course]="course"
       (courseChanged)="save($event)"
       type="beginner"
