--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,9 @@
     <button (click)="onEditCourse()">Change Course</button>
   </div>
 
-  <div class="courses" *ngIf="courses[0] as course">
+  <div class="courses">
     <course-card
+      *ngFor="let course of courses | filterByCategory : 'ADVANCED'"
       [course]="course"
       (courseChanged)="save($event)"
       type="beginner"
